<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserDetailsActivity">


    <RelativeLayout
        android:layout_alignParentTop="true"
        android:id="@+id/topBarLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <include
            layout="@layout/toolbar" />

    </RelativeLayout>

    <ScrollView
        android:layout_above="@+id/rlSubmitBtn"
        android:layout_below="@+id/topBarLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/etUsername"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_first_name"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middle_name"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_middle_name"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_last_name"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_city"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_home_city"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_address"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_home_address"
                    android:paddingStart="@dimen/_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly_income"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <EditText
                    android:id="@+id/et_monthly_income"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:layout_margin="20dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/rlSubmitBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:id="@+id/submitBtn"/>

    </RelativeLayout>

</RelativeLayout>