<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_profile"
        android:layout_margin="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="username"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tx_username"
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/tx_first_name"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/middle_name"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/tx_middle_name"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/tx_last_name"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_city"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/tx_home_city"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/home_address"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/tx_home_address"
                    android:paddingStart="@dimen/_10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/monthly_income"
                    android:layout_marginBottom="5dp"
                    android:textStyle="bold"/>

                <TextView
                    android:paddingTop="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:id="@+id/tx_monthly_income"
                    android:paddingStart="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="55dp"
                    android:background="@drawable/input_edtx_bg"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>