<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_20dp"
    tools:context=".fragments.DashboardFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:ignore="ScrollViewSize">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_160dp"
                app:cardCornerRadius="@dimen/_15dp">

                <LinearLayout
                    android:orientation="vertical"
                    android:padding="@dimen/_20dp"
                    android:background="@color/greenPrimary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <androidx.cardview.widget.CardView
                        android:layout_width="@dimen/_60dp"
                        android:layout_height="@dimen/_60dp"
                        app:cardCornerRadius="@dimen/_15dp">

                        <RelativeLayout
                            android:background="@color/grayPrimary"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_width="@dimen/_35dp"
                                android:layout_height="@dimen/_35dp"
                                android:layout_centerInParent="true"
                                android:src="@drawable/ic_profile"
                                tools:ignore="ContentDescription" />

                        </RelativeLayout>

                    </androidx.cardview.widget.CardView>

                    <TextView
                        android:id="@+id/txGreetings"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_18sp"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/hello_good_afternoon"/>

                    <TextView
                        android:id="@+id/txUsername"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_15sp"
                        android:textStyle="bold"
                        android:layout_marginTop="@dimen/_8dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/benjamin_sinzore"/>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_marginTop="@dimen/_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="DisableBaselineAlignment">

                <RelativeLayout
                    android:id="@+id/rlProfileBtn"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_60dp"
                            android:layout_height="@dimen/_60dp"
                            app:cardCornerRadius="@dimen/_15dp">

                            <RelativeLayout
                                android:background="@color/grayPrimary"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="@dimen/_35dp"
                                    android:layout_height="@dimen/_35dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/ic_profile"
                                    tools:ignore="ContentDescription" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_marginTop="@dimen/_8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/update_profile"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlSettingsBtn"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_60dp"
                            android:layout_height="@dimen/_60dp"
                            app:cardCornerRadius="@dimen/_15dp">

                            <RelativeLayout
                                android:background="@color/grayPrimary"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="@dimen/_35dp"
                                    android:layout_height="@dimen/_35dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/ic_settings"
                                    tools:ignore="ContentDescription" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_marginTop="@dimen/_8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/update_score"/>

                    </LinearLayout>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rlHelpBtn"
                    android:layout_width="@dimen/_0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center">

                    <LinearLayout
                        android:gravity="center"
                        android:orientation="vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <androidx.cardview.widget.CardView
                            android:layout_width="@dimen/_60dp"
                            android:layout_height="@dimen/_60dp"
                            app:cardCornerRadius="@dimen/_15dp">

                            <RelativeLayout
                                android:background="@color/grayPrimary"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">

                                <ImageView
                                    android:layout_width="@dimen/_35dp"
                                    android:layout_height="@dimen/_35dp"
                                    android:layout_centerInParent="true"
                                    android:src="@drawable/ic_help"
                                    tools:ignore="ContentDescription" />

                            </RelativeLayout>

                        </androidx.cardview.widget.CardView>

                        <TextView
                            android:layout_marginTop="@dimen/_8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/help"/>

                    </LinearLayout>

                </RelativeLayout>
            </LinearLayout>


            <TextView
                android:textColor="@color/black"
                android:textSize="@dimen/_25sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/qualified"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycle_view_financing"
                android:layout_marginTop="@dimen/_20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </ScrollView>

</FrameLayout>